Added custom font and animation to cover text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="aboutMeCSS.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <script src="typed.js"></script>
     </head>
     <body>
         <header>
@@ -26,8 +30,8 @@
               </nav>
         </header>
         <main>
-            <div class="bg">
-                <h1 id="openingText">Hello World! I'm Michael Rodyushkin</h1>
+            <div class="bg" style="text-align: center;">
+                <h1 id="title"><span id="openingText"></span></h1>
             </div>
             <h3>Hello</h3>
         </main>
