Added social media icons to Nav bar and fixed text slide animation

--- a/programming.html
+++ b/programming.html
@@ -7,20 +7,19 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="aboutMeCSS.css">
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-inverse navbar-fixed-top">
-                <div class="container-fluid">
-                  <div class="navbar-header">
-                    <a class="navbar-brand">Michael Rodyushkin</a>
-                  </div>
-                  <ul class="nav navbar-nav">
-                    <li><a href="./index.html">Home</a></li>
-                    <li class="active"><a href="./programming.html">Programming Experience</a></li>
-                  </ul>
-                </div>
-              </nav>
+          <nav class="w3-top">
+            <div class="w3-bar w3-black w3-xlarge">
+              <a href="./index.html" class="w3-bar-item w3-button">Home</a>
+              <a href="./programming.html" class="w3-bar-item w3-button w3-light-grey">Programming Experience</a>
+              <a href="https://github.com/PotentialError" class="w3-bar-item w3-button w3-right" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+              <a href="https://www.linkedin.com/in/michael-rodyushkin/" class="w3-bar-item w3-button w3-right" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></i></a>
+            </nav>
         </header>
         <main style="margin-top:70px">
             <section>
