Added Programming section to AboutMe page

--- a/programming.html
+++ b/programming.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Programming Experience</title>
+        <title>Programming Portfolio</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -16,7 +16,7 @@
           <nav class="w3-top">
             <div class="w3-bar w3-black w3-xlarge">
               <a href="./index.html" class="w3-bar-item w3-button">Home</a>
-              <a href="./programming.html" class="w3-bar-item w3-button w3-light-grey">Programming Experience</a>
+              <a href="./programming.html" class="w3-bar-item w3-button w3-light-grey">Programming Portfolio</a>
               <a href="https://github.com/PotentialError" class="w3-bar-item w3-button w3-right" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
               <a href="https://www.linkedin.com/in/michael-rodyushkin/" class="w3-bar-item w3-button w3-right" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></i></a>
             </nav>
