--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <nav class="w3-top">
             <div class="w3-bar w3-black w3-xlarge">
               <a href="./index.html" class="w3-bar-item w3-button w3-light-grey">Home</a>
-              <a href="./programming.html" class="w3-bar-item w3-button">Programming Experience</a>
+              <a href="./programming.html" class="w3-bar-item w3-button">Programming Portfolio</a>
               <a href="https://github.com/PotentialError" class="w3-bar-item w3-button w3-right" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
               <a href="https://www.linkedin.com/in/michael-rodyushkin/" class="w3-bar-item w3-button w3-right" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></i></a>
             </div>
@@ -58,24 +58,26 @@
             </div>
             <div class="aboutMeContent">
               <div class="w3-container w3-cell">
-                <img class="slideFromLeft aboutMeContentImages" src="AbingtonLogo.png">
+                <img class="slideFromLeft aboutMeContentImages" src="michaelCoding.jpg">
               </div>
               <div class="w3-container w3-cell w3-cell-middle">
-                <h3 class = "fadeIn">Academics</h3>
-                <p class="slideFromRight">I recieved my high school education from Abington Heights High School in Clarks Summit, PA. While there,
-                   I took three years of computer science courses learning Java, Kotlin, XML, and Android-app making. My senior year I was a TA for 
-                   an android course. Over my entire high school career, I took all honors courses and <b>nine</b> Advanced Placement courses scoring 4 or 
-                   higher in all of them and recieving the AP Scholar with Distinction award.</p>
+                <h3 class = "fadeIn">Programming Experience</h3>
+                <p class="slideFromRight">I started programming at the age of 10 on Scratch. Since then I have learned object-oriented 
+                  programming (Java, C#, Kotlin, and Python), database management (SQL), and digital design (Unity, XML, HTML, CSS, and Javascript).
+                  My current focus is learning how to effectively connect people with software through Unity, Android Studio, and HTML.
+                </p>
               </div>
             </div>
             <div class="aboutMeContent">
               <div class="w3-container w3-cell w3-cell-middle">
-                <h3 class = "fadeIn">Languages</h3>
-                <p class="slideFromLeft">Coming from a Russian immigrant family and living in the United States all my life, I am fluent in both English and Russian.
-                  I can listen, speak, and write in both languages.</p>
+                <h3 class = "fadeIn">Academics</h3>
+                <p class="slideFromRight">I recieved my high school education from Abington Heights High School in Clarks Summit, PA. While there,
+                   I took three years of computer science courses learning Java, Kotlin, XML, and Android-app making. My senior year I was a TA for 
+                   an Android course. Over my entire high school career, I took all honors courses and <b>nine</b> Advanced Placement courses scoring 4 or 
+                   higher in all of them and recieving the AP Scholar with Distinction award.</p>
               </div>
               <div class="w3-container w3-cell">
-                <img class="slideFromRight aboutMeContentImages" src="AmericanRussianFlag.jpg">
+                <img class="slideFromLeft aboutMeContentImages" src="AbingtonLogo.png">
               </div>
             </div>
             <div class="aboutMeContent">
@@ -90,6 +92,16 @@
                   and engineering students to apply their knowledge practically to large creative and community projects. 
                   More information about Software Club can be found <b><a href="https://sites.google.com/view/ah-software/home?authuser=0" target="_blank">
                   here</a></b>.</p>
+              </div>
+            </div>
+            <div class="aboutMeContent">
+              <div class="w3-container w3-cell w3-cell-middle">
+                <h3 class = "fadeIn">Languages</h3>
+                <p class="slideFromLeft">Coming from a Russian immigrant family and living in the United States all my life, I am fluent in both English and Russian.
+                  I can listen, speak, and write in both languages.</p>
+              </div>
+              <div class="w3-container w3-cell">
+                <img class="slideFromRight aboutMeContentImages" src="AmericanRussianFlag.jpg">
               </div>
             </div>
         </main>
