Fixed home page images vertical centering and consistent link colors

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         <header>
           <nav class="w3-top">
             <div class="w3-bar w3-black w3-xlarge">
-              <a href="./index.html" class="w3-bar-item w3-button w3-light-grey">Home</a>
+              <a href="./index.html" class="w3-bar-item w3-button">Home</a>
               <a href="./programming.html" class="w3-bar-item w3-button">Programming Portfolio</a>
-              <a href="https://github.com/PotentialError" class="w3-bar-item w3-button w3-right" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-              <a href="https://www.linkedin.com/in/michael-rodyushkin/" class="w3-bar-item w3-button w3-right" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></i></a>
+              <div>
+                <a href="https://github.com/PotentialError" class="w3-bar-item w3-button w3-right" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/michael-rodyushkin/" class="w3-bar-item w3-button w3-right" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></i></a>
+              </div>
             </div>
           </nav>
             <!--<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -52,12 +54,12 @@
                   dedicated community volunteer, and amateur chess and soccer player. My main goal is to bring STEM activities 
                   to Northeastern Pennsylvania.</p>
               </div>
-              <div class="w3-container w3-cell">
+              <div class="w3-container w3-cell w3-cell-middle">
                 <img class="slideFromRight aboutMeContentImages" src="profile2.jpg">
               </div>
             </div>
             <div class="aboutMeContent">
-              <div class="w3-container w3-cell">
+              <div class="w3-container w3-cell w3-cell-middle">
                 <img class="slideFromLeft aboutMeContentImages" src="michaelCoding.jpg">
               </div>
               <div class="w3-container w3-cell w3-cell-middle">
@@ -74,14 +76,14 @@
                 <p class="slideFromRight">I recieved my high school education from Abington Heights High School in Clarks Summit, PA. While there,
                    I took three years of computer science courses learning Java, Kotlin, XML, and Android-app making. My senior year I was a TA for 
                    an Android course. Over my entire high school career, I took all honors courses and <b>nine</b> Advanced Placement courses scoring 4 or 
-                   higher in all of them and recieving the AP Scholar with Distinction award.</p>
+                   higher in all of them and recieving the AP Scholar with Distinction award and became my class' <b>valedictorian</b>.</p>
               </div>
-              <div class="w3-container w3-cell">
+              <div class="w3-container w3-cell w3-cell-middle">
                 <img class="slideFromLeft aboutMeContentImages" src="AbingtonLogo.png">
               </div>
             </div>
             <div class="aboutMeContent">
-              <div class="w3-container w3-cell">
+              <div class="w3-container w3-cell w3-cell-middle">
                 <img id= "softwareClubLogo" src="softwareClubLogoGif.gif">
               </div>
               <div class="w3-container w3-cell w3-cell-middle">
@@ -100,7 +102,7 @@
                 <p class="slideFromLeft">Coming from a Russian immigrant family and living in the United States all my life, I am fluent in both English and Russian.
                   I can listen, speak, and write in both languages.</p>
               </div>
-              <div class="w3-container w3-cell">
+              <div class="w3-container w3-cell w3-cell-middle">
                 <img class="slideFromRight aboutMeContentImages" src="AmericanRussianFlag.jpg">
               </div>
             </div>
