Added initial Programming Portfolio

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Logos for NavBar -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
         <!-- Associated CSS -->
-        <link rel="stylesheet" href="mainPageCSS.css">
+        <link rel="stylesheet" href="indexCSS.css">
         <!-- W3 CSS Library -->
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <!-- JQuery Import -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <!-- Associated Script -->
-        <script src="./logic.js"></script>
+        <script src="./logicIndex.js"></script>
         <!-- Script for Typed Style -->
         <script src="typed.js"></script>
         <!-- Bootstrap Requirements-->
@@ -34,13 +34,14 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link">Home</a>
                     <a class="nav-link" href="./programming.html">Programming Portfolio</a>
                 </ul>
                 <ul class="navbar-nav my-2 my-lg-0">
                     <div class="row">
-                        <a class="nav-link mr-4 ml-3" href="https://github.com/PotentialError" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-                        <a class="nav-link mr-4" href="https://www.linkedin.com/in/michael-rodyushkin/" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></i></a>
+                        <a class="nav-link mr-4 ml-3" href="https://github.com/PotentialError" target="_blank"><i class="fab fa-github fa-lg" aria-hidden="true"></i></a>
+                        <a class="nav-link mr-4" href="https://www.linkedin.com/in/michael-rodyushkin/" target="_blank"><i class="fab fa-linkedin-in fa-lg" aria-hidden="true"></i></i></a>
+                        <a class="nav-link mr-4" href="https://potentialerror.itch.io/" target="_blank"><i class="fab fa-itch-io fa-lg"></i></a>
                     </div>
                 </ul>
             </div>
@@ -50,7 +51,7 @@
     <body>
         <!-- Title Jumbotron -->
         <div class="jumbotron text-center rounded-0 titleBackground" style="height:100vh;">
-            <h1 class="text-white my-auto" id="title" ><span id="openingText"></span></h1>
+            <h1 class="text-white my-auto" id="title" ><span id="openingHome"></span></h1>
         </div>
 
         <!-- About Me Section -->
@@ -59,7 +60,7 @@
             <!-- Intro Section -->
             <div class="row flex-nowrap mt-5 mb-5">
                 <div class="col-sm-4 my-auto">
-                    <img class = "slideFromLeft rounded-circle aboutMe mx-auto d-block" src="profile2.jpg">
+                    <img class = "slideFromLeft rounded-circle aboutMe mx-auto d-block" src="Assets/profile2.jpg">
                 </div>
                 <div class="col-sm-8 my-auto">
                     <h2 class="fadeIn">Nice to meet you!</h1>
@@ -79,7 +80,7 @@
                         My current focus is exploring the field of robotics through ROS2, perception, and machine learning.</small></h3>
                 </div>
                 <div class="col-sm-4 my-auto">
-                    <img class="rounded-circle aboutMe mx-auto d-block slideFromRight" src="michaelCoding.jpg">
+                    <img class="rounded-circle aboutMe mx-auto d-block slideFromRight" src="Assets/michaelCoding.jpg">
                 </div>     
             </div>
             <hr class = "border border-primary">
@@ -87,7 +88,7 @@
             <!-- Academics Section -->
             <div class="row flex-nowrap mt-5 mb-5">
                 <div class="col-sm-4 my-auto">
-                    <img class = "slideFromLeft rounded-circle aboutMe mx-auto d-block" src="GTLogo.png">
+                    <img class = "slideFromLeft rounded-circle aboutMe mx-auto d-block" src="Assets/GTLogo.png">
                 </div>
                 <div class="col-sm-8 my-auto">
                     <h2 class="fadeIn">Academics</h1>
@@ -114,7 +115,7 @@
                         computer science projects.</small></h3>
                 </div>
                 <div class="col-sm-4 my-auto">
-                    <img class="rounded-circle aboutMe mx-auto d-block slideFromRight" src="softwareClubLogoGif.gif">
+                    <img class="rounded-circle aboutMe mx-auto d-block slideFromRight" src="Assets/softwareClubLogoGif.gif">
                 </div>     
             </div>
             <hr class = "border border-primary">
@@ -122,7 +123,7 @@
             <!-- Languages -->
             <div class="row flex-nowrap mt-5 mb-5">
                 <div class="col-sm-4 my-auto">
-                    <img class = "slideFromLeft rounded-circle aboutMe mx-auto d-block" src="AmericanRussianFlag.jpg">
+                    <img class = "slideFromLeft rounded-circle aboutMe mx-auto d-block" src="Assets/AmericanRussianFlag.jpg">
                 </div>
                 <div class="col-sm-8 my-auto">
                     <h2 class="fadeIn">Languages</h1>
