--- a/programming.html
+++ b/programming.html
@@ -114,7 +114,7 @@
                 <div class="col-sm-8 my-auto">
                     <div class="row flex-nowrap mx-auto mb-3">
                         <img src="Assets/MikeyBotLogo.PNG" class="appIcon my-auto">
-                        <h1 class="text-white my-auto">MikeyBot</h1>
+                        <h1 class="text-white my-auto text-center">MikeyBot</h1>
                     </div>
                     <h3 class="text-white">Discord bot that uses Java Discord API to provide users useful features for their server</h3>
                 </div>
