--- a/programming.html
+++ b/programming.html
@@ -50,8 +50,8 @@
 
     <body class="container-fluid">
         <!--Page Title-->
-        <div class="section row text-center" style="min-height:40vh; background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/codeBackground.PNG');">
-            <h1 class="title text-white my-auto"><span id="openingProgram"></span></h1>
+        <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/codeBackground.PNG');">
+            <h1 class="title text-white my-auto title"><span id="openingProgram"></span></h1>
         </div>
 
         <!-- Debate Tracker App -->
@@ -127,7 +127,7 @@
         <!--End Title-->
         <div class="section row text-center" style="min-height:30vh; background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/codeBackground.PNG');">
             <div class="col my-auto">
-                <h2 class="text-white">More of my work can be found on:</h2>
+                <h2 class="text-white title">More of my work can be found on:</h2>
                 <h2><a href="https://github.com/PotentialError"> My Github <i class="fab fa-github fa-lg" aria-hidden="true"></i></a></h2>
             </div>
         </div>
