--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Script for Typed Style -->
         <script src="typed.js"></script>
         <!-- Associated CSS -->
-        <link rel="stylesheet" href="indexNEW.css">
+        <link rel="stylesheet" href="indexCSS.css">
         <!-- Boostrap Icons-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     </head>
