Added Bio and 2 Documents

--- a/programming.html
+++ b/programming.html
@@ -30,7 +30,8 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <a class="nav-link"  href="./index.html">Home</a>
-                    <a class="nav-link" href="./programming.html">Programming Portfolio</a>
+                    <a class="nav-link disabled" href="#">Programming Portfolio</a> 
+                    <a class="nav-link" href="Assets/RodyushkinResumeJune2024.pdf" target="_blank">Resume <i class="bi bi-box-arrow-in-up-right"></i></a>
                 </ul>
                 <ul class="navbar-nav my-2 my-lg-0">
                     <div class="row">
@@ -48,45 +49,47 @@
             <h1 class="title text-white my-auto title"><span id="openingProgram"></span></h1>
         </div>
 
+        <!-- Firefly -->
+        <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
+            <div class="col-md-8 my-auto">
+                <a href="https://devpost.com/software/firefly-jl91pg" target="_blank">
+                    <div class="row flex-nowrap mx-auto mb-3">
+                        <img src="Assets/FireflyLogo.png" class="appIcon my-auto">
+                        <h1 class="text-white my-auto">Firefly</h1>
+                    </div>
+                    <h3 class="text-white">A full-stack website that allows professors to get a real-time temperature check about how the class feels about each part of a lecture</h3>
+                    <p class = "text-white">(Submission for HackGT 10)</p>
+                </a>
+            </div>
+            <div class="col-md-4 my-auto mx-auto">
+                <a href="https://devpost.com/software/firefly-jl91pg" target="_blank">
+                    <img src="Assets/fireflyScreenshot.png" class="screenshot">
+                </a>
+            </div>
+        </div>
+
+        <!-- Crop Recommendation Model -->
+        <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/cropRecomendationGraph.png');">
+            <div class="col-md-8 my-auto">
+                <a href="https://github.com/PotentialError/CS4641-ML-Final-Project" target="_blank">
+                    <h1 class="text-white my-auto">Crop Recommendation Model</h1>
+                    <h3 class="text-white">A classic machine learning model that predicts the best crop to plant given soil characteristics</h3>
+                </a>
+            </div>
+        </div>
+
         <!-- Debate Tracker App -->
         <a href="https://github.com/PotentialError/DebateTrackerApp" target="_blank">
             <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
-                <div class="col-sm-8 my-auto">
+                <div class="col-md-8 my-auto">
                     <div class="row flex-nowrap mx-auto mb-3">
                         <img src="Assets/debateTrackerSquareLogo.png" class="appIcon my-auto">
                         <h1 class="text-white my-auto">Debate Tracker App</h1>
                     </div>
                     <h3 class="text-white">Android app for NSDA and NCFL high school debaters to track their debate rounds</h3>
                 </div>
-                <div class="col-sm-4 my-auto mx-auto" style="padding-top: 20px; margin-bottom: 100px;">
+                <div class="col-md-4 my-auto mx-auto" style="padding-top: 20px; margin-bottom: 100px;">
                     <img src="Assets/debateTrackerScreenshot.jpg" class="screenshot">
-                </div>
-            </div>
-        </a>
-
-        <!-- Ball Game -->
-        <a href="https://github.com/PotentialError/BallGame" target="_blank">
-            <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/RollABallScreenshot.PNG');">
-                <div class="col-sm-8 my-auto">
-                    <h1 class="text-white my-auto">Ball Game</h1>
-                    <h3 class="text-white">3D Unity game about the adventures of a ball and his coins</h3>
-                </div>
-            </div>
-        </a>
-
-        <!-- DiningDetective -->
-        <a href="https://github.com/PotentialError/DiningDetective" target="_blank">
-            <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
-                <div class="col-sm-8 my-auto">
-                    <div class="row flex-nowrap mx-auto mb-3">
-                        <img src="Assets/diningDetectiveSquareLogo.png" class="appIcon my-auto">
-                        <h1 class="text-white my-auto">Dining Detective</h1>
-                    </div>
-                    <h3 class="text-white">Android app that uses a neural network to predict dining hall conditions at Georgia Tech</h3>
-                    <p class="text-white">(Submission for HackGT 8)</p>
-                </div>
-                <div class="col-sm-4 my-auto mx-auto" style="padding-top: 20px; margin-bottom: 100px;">
-                    <img src="Assets/DiningDetectiveScreenshot.jpg" class="screenshot">
                 </div>
             </div>
         </a>
@@ -94,7 +97,7 @@
         <!-- Haywire -->
         <a href="https://github.com/PotentialError/GMTK2020GameJam" target="_blank">
             <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/hayWireScrrenshot.PNG');">
-                <div class="col-sm-8 my-auto">
+                <div class="col-md-8 my-auto">
                     <h1 class="text-white my-auto">Haywire</h1>
                     <h3 class="text-white">2D Unity platformer game about a robot that has gone out of control</h3>
                     <p class = "text-white">(Submission for GMTK Game Jam 2020)</p>
@@ -102,17 +105,43 @@
             </div>
         </a>
 
+        <!-- DiningDetective -->
+        <a href="https://github.com/PotentialError/DiningDetective" target="_blank">
+            <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
+                <div class="col-md-8 my-auto">
+                    <div class="row flex-nowrap mx-auto mb-3">
+                        <img src="Assets/diningDetectiveSquareLogo.png" class="appIcon my-auto">
+                        <h1 class="text-white my-auto">Dining Detective</h1>
+                    </div>
+                    <h3 class="text-white">Android app that uses a neural network to predict dining hall conditions at Georgia Tech</h3>
+                    <p class="text-white">(Submission for HackGT 8)</p>
+                </div>
+                <div class="col-md-4 my-auto mx-auto" style="padding-top: 20px; margin-bottom: 100px;">
+                    <img src="Assets/DiningDetectiveScreenshot.jpg" class="screenshot">
+                </div>
+            </div>
+        </a>
+
+        <!-- Ball Game -->
+        <a href="https://github.com/PotentialError/BallGame" target="_blank">
+            <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/RollABallScreenshot.PNG');">
+                <div class="col-md-8 my-auto">
+                    <h1 class="text-white my-auto">Ball Game</h1>
+                    <h3 class="text-white">3D Unity game about the adventures of a ball and his coins</h3>
+                </div>
+            </div>
+        </a>
+
         <!-- MikeyBot -->
         <a href="https://github.com/PotentialError/DiscordBotTesting" target="_blank">
             <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
-                <div class="col-sm-8 my-auto">
+                <div class="col-md-8 my-auto">
                     <div class="row flex-nowrap mx-auto mb-3">
-                        <img src="Assets/MikeyBotLogo.PNG" class="appIcon my-auto">
                         <h1 class="text-white my-auto text-center">MikeyBot</h1>
                     </div>
                     <h3 class="text-white">Discord bot that uses Java Discord API to provide users useful features for their server</h3>
                 </div>
-                <div class="col-sm-4 my-auto mx-auto" style="padding-top: 20px; margin-bottom: 100px;">
+                <div class="col-md-4 my-auto mx-auto">
                     <img src="Assets/MikeyBot.gif" class="screenshot">
                 </div>
             </div>
