--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     My interests and experiences span the tech stack, from data management to Unity game design. 
                     In addition to the small projects I have developed at Georgia Tech, I bring over two years of industry experience building full-stack, production-ready applications for companies like Roblox and Symbotic. 
                     I have also spearheaded machine learning research efforts in a biomedical research lab at my university. These experiences have honed my ability to quickly learn new concepts and develop large-scale applications, making me an ideal fit for any startup.
-                    Learn more about my <a href="Assets/RodyushkinResumeJune2024.pdf" target="_blank">background</a> and <a href="./programming.html">personal projects</a>!
+                    Learn more about my <a href="Assets/RodyushkinResumeJune2024.pdf" target="_blank" class="whiteLinks">background</a> and <a href="./programming.html" class="whiteLinks">personal projects</a>!
                     </p>
                 </div>
             </div>
