--- a/programming.html
+++ b/programming.html
@@ -45,7 +45,7 @@
 
     <body class="container-fluid">
         <!--Page Title-->
-        <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/codeBackground.PNG');">
+        <div class="section row text-center" style="background-image: linear-gradient(rgba(4, 4, 63,0.9), rgba(4, 4, 63,0.5)), url('Assets/codeBackground.PNG');">
             <h1 class="title text-white my-auto title"><span id="openingProgram"></span></h1>
         </div>
 
@@ -79,76 +79,82 @@
         </div>
 
         <!-- Debate Tracker App -->
-        <a href="https://github.com/PotentialError/DebateTrackerApp" target="_blank">
-            <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
-                <div class="col-md-8 my-auto">
+        <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
+            <div class="col-md-8 my-auto">
+                <a href="https://github.com/PotentialError/DebateTrackerApp" target="_blank">
                     <div class="row flex-nowrap mx-auto mb-3">
                         <img src="Assets/debateTrackerSquareLogo.png" class="appIcon my-auto">
                         <h1 class="text-white my-auto">Debate Tracker App</h1>
                     </div>
                     <h3 class="text-white">Android app for NSDA and NCFL high school debaters to track their debate rounds</h3>
-                </div>
-                <div class="col-md-4 my-auto mx-auto" style="padding-top: 20px; margin-bottom: 100px;">
-                    <img src="Assets/debateTrackerScreenshot.jpg" class="screenshot">
-                </div>
+                </a>
             </div>
-        </a>
+            <div class="col-md-4 my-auto mx-auto">
+                <a href="https://github.com/PotentialError/DebateTrackerApp" target="_blank">
+                    <img src="Assets/debateTrackerScreenshot.jpg" class="screenshot">
+                </a>
+            </div>
+        </div>
 
         <!-- Haywire -->
-        <a href="https://github.com/PotentialError/GMTK2020GameJam" target="_blank">
-            <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/hayWireScrrenshot.PNG');">
-                <div class="col-md-8 my-auto">
+        <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/hayWireScrrenshot.PNG');">
+            <div class="col-md-8 my-auto">
+                <a href="https://github.com/PotentialError/GMTK2020GameJam" target="_blank">
                     <h1 class="text-white my-auto">Haywire</h1>
                     <h3 class="text-white">2D Unity platformer game about a robot that has gone out of control</h3>
                     <p class = "text-white">(Submission for GMTK Game Jam 2020)</p>
-                </div>
+                </a>
             </div>
-        </a>
+        </div>
 
         <!-- DiningDetective -->
-        <a href="https://github.com/PotentialError/DiningDetective" target="_blank">
-            <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
-                <div class="col-md-8 my-auto">
+        <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
+            <div class="col-md-8 my-auto">
+                <a href="https://github.com/PotentialError/DiningDetective" target="_blank">
                     <div class="row flex-nowrap mx-auto mb-3">
                         <img src="Assets/diningDetectiveSquareLogo.png" class="appIcon my-auto">
                         <h1 class="text-white my-auto">Dining Detective</h1>
                     </div>
                     <h3 class="text-white">Android app that uses a neural network to predict dining hall conditions at Georgia Tech</h3>
                     <p class="text-white">(Submission for HackGT 8)</p>
-                </div>
-                <div class="col-md-4 my-auto mx-auto" style="padding-top: 20px; margin-bottom: 100px;">
-                    <img src="Assets/DiningDetectiveScreenshot.jpg" class="screenshot">
-                </div>
+                </a>
             </div>
-        </a>
+            <div class="col-md-4 my-auto mx-auto">
+                <a href="https://github.com/PotentialError/DiningDetective" target="_blank">
+                    <img src="Assets/DiningDetectiveScreenshot.jpg" class="screenshot">
+                </a>
+            </div>
+        </div>
 
         <!-- Ball Game -->
-        <a href="https://github.com/PotentialError/BallGame" target="_blank">
-            <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/RollABallScreenshot.PNG');">
-                <div class="col-md-8 my-auto">
+        <div class="section row text-center" style="background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/RollABallScreenshot.PNG');">
+            <div class="col-md-8 my-auto">
+                <a href="https://github.com/PotentialError/BallGame" target="_blank">
                     <h1 class="text-white my-auto">Ball Game</h1>
                     <h3 class="text-white">3D Unity game about the adventures of a ball and his coins</h3>
-                </div>
+                </a>
             </div>
-        </a>
+        </div>
 
         <!-- MikeyBot -->
-        <a href="https://github.com/PotentialError/DiscordBotTesting" target="_blank">
-            <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
-                <div class="col-md-8 my-auto">
+        <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
+            <div class="col-md-8 my-auto">
+                <a href="https://github.com/PotentialError/DiscordBotTesting" target="_blank">
                     <div class="row flex-nowrap mx-auto mb-3">
                         <h1 class="text-white my-auto text-center">MikeyBot</h1>
                     </div>
                     <h3 class="text-white">Discord bot that uses Java Discord API to provide users useful features for their server</h3>
-                </div>
-                <div class="col-md-4 my-auto mx-auto">
-                    <img src="Assets/MikeyBot.gif" class="screenshot">
-                </div>
+                </a>
             </div>
-        </a>
+            <div class="col-md-4 my-auto mx-auto">
+                <a href="https://github.com/PotentialError/DiscordBotTesting" target="_blank">
+                    <img src="Assets/MikeyBot.gif" class="screenshot">
+                </a>
+            </div>
+        </div>
 
         <!--End Title-->
-        <div class="section row text-center" style="min-height:30vh; background-image: linear-gradient(141deg,rgba(0, 0, 128,0.5), rgba(0, 0, 77, 0.5)), url('Assets/codeBackground.PNG');">
+        <div class="section row text-center" style="min-height:30vh; background-image: linear-gradient(rgba(4, 4, 63, 0.975), rgba(4, 4, 63,0.775)), url('Assets/codeBackground.PNG');">
             <div class="col my-auto">
                 <h2 class="text-white title">More of my work can be found on:</h2>
                 <h2><a href="https://github.com/PotentialError"> My Github <i class="bi bi-github" aria-hidden="true"></i></a></h2>
