Update Dining Detective Link

--- a/programming.html
+++ b/programming.html
@@ -81,7 +81,7 @@
         <!-- DiningDetective -->
         <div class="section row text-center" style="background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);">
             <div class="col-md-8 my-auto">
-                <a href="https://github.com/PotentialError/DiningDetective" target="_blank">
+                <a href="https://devpost.com/software/gt-dining-detective" target="_blank">
                     <div class="row flex-nowrap mx-auto mb-3">
                         <img src="Assets/diningDetectiveSquareLogo.png" class="appIcon my-auto">
                         <h1 class="text-white my-auto">Dining Detective</h1>
@@ -91,7 +91,7 @@
                 </a>
             </div>
             <div class="col-md-4 my-auto mx-auto">
-                <a href="https://github.com/PotentialError/DiningDetective" target="_blank">
+                <a href="https://devpost.com/software/gt-dining-detective" target="_blank">
                     <img src="Assets/DiningDetectiveScreenshot.jpg" class="screenshot">
                 </a>
             </div>
